# realtime_stock_insights

./: Dockerfile  README.md  app.py  helper.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: CICD.yaml
css/: style.css
templates/: index.html
